--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,5 @@
 :root {
+  --placeholder-backround: #d7d7d7;
   --card-shadow:
           0 1px 2px -2px rgb(0 0 0 / 16%),
           0 3px 6px 0 rgb(0 0 0 / 12%),
